<resources>
    <string name="app_name">Gotas 2.0</string>
    <string name="sp_text1">Sampurasun!</string>
    <string name="sp_text2">Silahkan login terlebih dahulu</string>
    <string name="sp_text3">Nama Pengguna / Email</string>
    <string name="sp_text4">Kata Sandi</string>
    <string name="sp_text5">Dengan masuk, kamu telah menyetujui\nKetentuan Layanan dan Kebijakan Privasi</string>
    <string name="sp_text6">Daftar</string>

    <string name="sup_text1">REGISTRASI</string>
    <string name="sup_text2">Silahkan isi data diri anda dibawah ini</string>
    <string name="sup_text3">Nama Lengkap</string>
    <string name="sup_text4">Email</string>
    <string name="sup_text5">Nomor Handphone</string>
    <string name="sup_text6">Username</string>
    <string name="sup_text7">Kata Sandi</string>
    <string name="sup_text8">Dengan menjadi pengguna berarti Anda telah setuju dengan\nSyarat dan Ketentuan &amp; Kebijakan Privasi kami</string>
    <string name="sup_text9">Sudah memiliki akun? Masuk disini</string>

    <!--String For On Boarding Screen-->
    <string name="ob_heading_1">Wilujeng Sumping!</string>
    <string name="ob_desc_1">GOTAS merupakan aplikasi jasa layanan\nkarya putra daerah Tasikmalaya</string>

    <string name="ob_heading_2">Genah. Murah. Ramah. Berkah.</string>
    <string name="ob_desc_2">Nikmati berbagai jenis layanan dengan\nharga terjangkau dan pelayanan terbaik</string>

    <string name="ob_heading_3">Hatur Nuhun!</string>
    <string name="ob_desc_3">Mangga Akang/Teteh.\nSelamat menggunaan layanan dari\nGotas Tasikmalaya</string>

    <!--ForgetPass-->
    <string name="forgetPass">Lupa Password?</string>
    <string name="forgetPass2">Lupa Password</string>
    <string name="email">Email</string>
    <string name="makeSelection">Buat\npilihan</string>
    <string name="makeSelectionDetail">Pilih detail kontak yang mana\nuntuk memperbarui password?</string>
    <string name="mobileTitle">Via SMS:</string>
    <string name="mobileDesc">+62 1234 567 89</string>
    <string name="mailTitle">Via Mail:</string>
    <string name="mailDesc">support@gotas.com</string>
    <string name="resetTitle">Reset Password</string>
    <string name="newPass">Kata Sandi Baru</string>
    <string name="newPass2">Ulang Kata Sandi Baru</string>
    <string name="resetPass">Atur Ulang</string>

    <!--Button-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="ayo_mulai">Ayo Mulai!</string>
    <string name="forgetPassDetail">Harap masukkan akun email anda\nyang akan di perbarui kata sandinya</string>
    <string name="logIn">Masuk</string>

    <!--Dashboard-->
    <string name="search_tab">Temukan Layanan</string>

    <!--TasFood-->
    <string name="title_tasfood">Mau makan apa hari ini?</string>
</resources>