<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpPage"
    android:orientation="vertical"
    android:background="#ffffff"
    android:padding="20dp">

    <Button
        android:id="@+id/btnRedirectLoginPage"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:backgroundTint="@color/transparent"
        android:text="@string/logIn"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="18sp"
        android:fontFamily="@font/galvji_bold"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="left"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/black_logo_nobg"
        android:transitionName="logo_image"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/greetingSignUp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sup_text1"
        android:transitionName="logo_text"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/galvji_bold"/>

    <TextView
        android:id="@+id/greetingSignUp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sup_text2"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/galvji"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/fldFullName"
            android:hint="@string/sup_text3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/fldUsername"
            android:hint="@string/sup_text6"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/fldEmail"
            android:hint="@string/sup_text4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/fldPhoneNo"
            android:hint="@string/sup_text5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/fldPassword"
            android:hint="@string/sup_text7"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sup_text8"
            android:textAlignment="center"
            android:textSize="12sp"
            android:gravity="center_horizontal"
            android:fontFamily="@font/galvji"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="Daftar"
            android:backgroundTint="@color/newOrange"
            android:fontFamily="@font/galvji_bold"/>

    </LinearLayout>
</LinearLayout>