<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage"
    android:orientation="vertical"
    android:background="@drawable/custom_bg_gradient"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@mipmap/gotas_logo_foreground"
        android:transitionName="logo_image"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/greetingLogin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sp_text1"
        android:transitionName="logo_text"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/greetingLogin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sp_text2"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fldUsername"
            android:hint="@string/sp_text3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fldPassword"
            android:hint="@string/sp_text4"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btnForgetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="Lupa Kata Sandi?"
            android:layout_gravity="right"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Masuk"
            android:backgroundTint="@color/darkOrange"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sp_text5"
            android:textAlignment="center"
            android:textSize="12sp"
            android:gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnRedirectSignUpPage"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/sp_text6"
            android:textAllCaps="false"
            android:textColor="@color/cardview_dark_background" />
    </LinearLayout>

</LinearLayout>