<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword.MakeSelectionPage"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:padding="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/makeSelection"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/galvji_bold"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/makeSelectionDetail"
            android:textSize="18sp"
            android:fontFamily="@font/galvji"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:background="@color/lightCream"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mobileIcon"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:src="@drawable/phone2_icon"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/mobileTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobileTitle"
                android:textSize="20sp"
                android:fontFamily="@font/galvji_bold"
                android:layout_toRightOf="@+id/mobileIcon"
                android:layout_marginTop="55dp"/>

            <TextView
                android:id="@+id/mobileDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobileDesc"
                android:textSize="18sp"
                android:fontFamily="@font/galvji_bold"
                android:textColor="@color/colorPrimary"
                android:layout_toRightOf="@id/mobileIcon"
                android:layout_below="@+id/mobileTitle"/>

            <Button
                android:id="@+id/smsBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/transparent"
                style="?android:attr/borderlessButtonStyle"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:background="@color/lightCream"
            android:padding="10dp">

            <ImageView
                android:id="@+id/emailIcon"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:src="@drawable/mail_icon"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/emailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mailTitle"
                android:textSize="20sp"
                android:fontFamily="@font/galvji_bold"
                android:layout_toRightOf="@+id/emailIcon"
                android:layout_marginTop="55dp"/>

            <TextView
                android:id="@+id/emailDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mailDesc"
                android:textSize="18sp"
                android:fontFamily="@font/galvji_bold"
                android:textColor="@color/colorPrimary"
                android:layout_toRightOf="@id/emailIcon"
                android:layout_below="@+id/emailTitle"/>

            <Button
                android:id="@+id/mailBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/transparent"
                style="?android:attr/borderlessButtonStyle"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>