<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword.ForgetPassPage"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:padding="5dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/forgetpass_icon"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/forgetPass2"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/galvji_bold"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/forgetPassDetail"
            android:textSize="13sp"
            android:textStyle="bold"
            android:fontFamily="@font/galvji_bold"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textAllCaps="true"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/fldFullName"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            android:hint="@string/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnResetEmail"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:text="@string/next_btn"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/galvji_bold"/>

    </LinearLayout>

</ScrollView>