<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword.ResetPasswordPage"
    android:orientation="vertical"
    android:background="@color/newOrange"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_white"
            android:padding="5dp"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/reset_icon"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"/>

        <TextView
            android:id="@+id/greetingLogin1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetTitle"
            android:textSize="35sp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/galvji_bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newPass"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reNewPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newPass2"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnResetEmail"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:text="@string/resetPass"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/galvji_bold"/>
    </LinearLayout>
</ScrollView>